examples/test/testpolicy7462.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7462
  namespace: namespace370
spec:
  podSelector:
    matchLabels:
      key0: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value15
          key2: value49
      podSelector:
        matchLabels:
          key38: value34
          key33: value5
          key22: value33
